--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sahil Kawale | Portfolio</title>
+  <title>Sahil Kawale | HACKER</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400|Open+Sans:400,700&display=swap" rel="stylesheet">
   <style>
